# learn_ros_ws

./: README.md  READmE.md  all_launch.sh
readme_source/: Screencast_from_Saturday_August_24_2024_044356_PM_HKT.webm  Screencast_from_Saturday_August_24_2024_050447_PM_HKT.webm
src/learn_navigation/: CMakeLists.txt  package.xml
src/learn_publisher/: CMakeLists.txt  package.xml
src/learn_publisher/src/: publisher.cpp
src/learn_ros_simulation/: CMakeLists.txt  package.xml
src/learn_ros_simulation/launch/: rm_simulation.launch.py
src/learn_ros_simulation/meshes/auto_world/: auto_world.dae
src/learn_ros_simulation/meshes/map2gz/: map2.sdf  model.config
src/learn_ros_simulation/meshes/map2gz/meshes/: map1.dae
src/learn_ros_simulation/meshes/map3/: map3.sdf  model.config
src/learn_ros_simulation/meshes/map3/meshes/: map3.dae
src/learn_ros_simulation/meshes/map5/: map5.sdf  model.config
src/learn_ros_simulation/meshes/map5/meshes/: map2.dae
src/learn_ros_simulation/rviz/: rviz2.rviz
src/learn_ros_simulation/urdf/: simulation_waking_robot.xacro
src/learn_ros_simulation/world/BIGCUBE2/: BIGCUBE2.world
src/learn_ros_simulation/world/auto_world/: auto_world.world  model.config  model.sdf
src/learn_ros_simulation/world/map2/: map2.world
src/learn_ros_simulation/world/map5/: map5.world
src/learn_server_client/: CMakeLists.txt  package.xml
src/learn_subuscriber/: CMakeLists.txt  package.xml
src/learn_subuscriber/src/: subscriber.cpp
src/path_follower/: CMakeLists.txt  package.xml
