<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>learn_ros_simulation</name>
  <version>1.0.0</version>
  <description>
    Gazebo simulation package for the learn ros in navigation
  </description>
  <maintainer email="330709390@qq.com">Liu</maintainer>
  <license>TODO</license>
  <author email="330709390@qq.com">Liu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>

  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
  </export>
</package>
